--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "star-system-map-generator",
   "author": "Alex Sincai",
+  "license": "MIT",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,9 @@
     "react-dom": "^16.13.0",
     "react-scripts": "^3.4.0",
     "save-svg-as-png": "^1.4.17"
+  },
+  "engines": {
+    "node": "12.x"
   },
   "scripts": {
     "start": "react-scripts start",
